// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hosts query JSONObjectFilter empty 1`] = `Object {}`;

exports[`hosts query JSONObjectFilter simple canonical fact query 1`] = `
Object {
  "insights_id": "371e0253-b145-4428-9f7a-7d934aad983d",
  "satellite_id": "ce87bfac-a6cb-43a0-80ce-95d9669db71f",
}
`;

exports[`hosts query JSONObjectFilter simple system profile query 1`] = `
Object {
  "arch": "RISC-V",
  "os_release": "7.5",
}
`;

exports[`hosts query fetch host with canonical facts 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "canonical_facts": Object {
          "fqdn": "fqdn.test03.rhel7.jharting.local",
          "insights_id": "371e0253-b145-4428-9f7a-7d934aad983d",
          "provider_id": "1d073c47-8467-4372-b585-7b0d40d2ee3c",
          "provider_type": "alibaba",
          "satellite_id": "ce87bfac-a6cb-43a0-80ce-95d9669db71f",
          "subscription_manager_id": "1d073c47-8467-4372-b585-7b0d40d2ee3c",
        },
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
      },
    ],
  },
}
`;

exports[`hosts query fetch host with per-reporter staleness 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "per_reporter_staleness": Object {
          "puptoo": Object {
            "check_in_succeeded": true,
            "last_check_in": "2019-03-09T08:07:03.354307Z",
            "stale_timestamp": "2019-03-10T08:07:03.354307Z",
          },
          "yupana": Object {
            "check_in_succeeded": false,
            "last_check_in": "2019-01-10T08:07:03.354307Z",
            "stale_timestamp": "2019-01-11T08:07:03.354307Z",
          },
        },
      },
    ],
  },
}
`;

exports[`hosts query fetch hosts 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "ansible_host": "test01.rhel7.jharting.local",
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "modified_on": "2019-02-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-02-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test02.rhel7.jharting.local",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-01-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test03.rhel7.jharting.local",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test01.rhel7.aprice.local",
        "display_name": "test1.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc01",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test02.rhel7.aprice.local",
        "display_name": "test2.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc02",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test03.rhel8.aprice.local",
        "display_name": "test3.rhel8.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc03",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test04.rhel.aprice.local",
        "display_name": "test4.rhel.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc04",
        "modified_on": "2020-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
    ],
  },
}
`;

exports[`hosts query ordering display_name ASC 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "ansible_host": "test01.rhel7.jharting.local",
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "modified_on": "2019-02-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-02-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test02.rhel7.jharting.local",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-01-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test03.rhel7.jharting.local",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test01.rhel7.aprice.local",
        "display_name": "test1.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc01",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test02.rhel7.aprice.local",
        "display_name": "test2.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc02",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test03.rhel8.aprice.local",
        "display_name": "test3.rhel8.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc03",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test04.rhel.aprice.local",
        "display_name": "test4.rhel.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc04",
        "modified_on": "2020-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
    ],
  },
}
`;

exports[`hosts query ordering display_name DESC 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "ansible_host": "test04.rhel.aprice.local",
        "display_name": "test4.rhel.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc04",
        "modified_on": "2020-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test03.rhel8.aprice.local",
        "display_name": "test3.rhel8.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc03",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test02.rhel7.aprice.local",
        "display_name": "test2.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc02",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test01.rhel7.aprice.local",
        "display_name": "test1.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc01",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test03.rhel7.jharting.local",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test02.rhel7.jharting.local",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-01-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test01.rhel7.jharting.local",
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "modified_on": "2019-02-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-02-10T08:07:03.354307Z",
      },
    ],
  },
}
`;

exports[`hosts query ordering modified_on DESC 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "ansible_host": "test04.rhel.aprice.local",
        "display_name": "test4.rhel.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc04",
        "modified_on": "2020-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test01.rhel7.aprice.local",
        "display_name": "test1.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc01",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test02.rhel7.aprice.local",
        "display_name": "test2.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc02",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test03.rhel8.aprice.local",
        "display_name": "test3.rhel8.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc03",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test03.rhel7.jharting.local",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test01.rhel7.jharting.local",
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "modified_on": "2019-02-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-02-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test02.rhel7.jharting.local",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-01-10T08:07:03.354307Z",
      },
    ],
  },
}
`;

exports[`hosts query ordering operating_system ASC 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "display_name": "test2.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc02",
        "org_id": "test",
        "system_profile_facts": Object {
          "operating_system": Object {
            "major": 8,
          },
          "owner_id": "it8i99u1-48ut-1rdf-bc10-84opf904test",
        },
      },
      Object {
        "account": "test",
        "display_name": "test4.rhel.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc04",
        "org_id": "test",
        "system_profile_facts": Object {
          "operating_system": Object {
            "minor": 7,
            "name": "CENT",
          },
          "owner_id": "it8i99u1-48ut-1rdf-bc10-84opf904test",
        },
      },
      Object {
        "account": "test",
        "display_name": "test3.rhel8.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc03",
        "org_id": "test",
        "system_profile_facts": Object {
          "operating_system": Object {
            "major": 8,
            "name": "CENT",
          },
          "owner_id": "it8i99u1-48ut-1rdf-bc10-84opf904test",
        },
      },
      Object {
        "account": "test",
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "org_id": "test",
        "system_profile_facts": Object {
          "ansible": Object {
            "catalog_worker_version": "4.5.6",
            "controller_version": "4.5.6",
            "hub_version": "4.5.6",
            "sso_version": "4.5.6",
          },
          "arch": "x86_64",
          "basearch": "arm",
          "bios_release_date": "12/01/2006",
          "bios_vendor": "ex2",
          "bios_version": "ex2",
          "captured_date": "ex2",
          "cloud_provider": "ms",
          "cores_per_socket": 1,
          "cpu_flags": "ex2",
          "cpu_model": "Intel(R) Xeon(R) CPU E9-7800 0 @ 1.90GHz",
          "disk_devices": Object {
            "device": "/dev/sda1",
            "label": "bar",
            "mount_point": "/mnt/local_nfs",
            "type": "ext2",
          },
          "dnf_modules": Object {
            "name": "dfg",
            "stream": "dfg",
          },
          "enabled_services": "ex2",
          "gpg_pubkeys": "gpg-pubkey-22222222-22222222",
          "greenboot_fallback_detected": false,
          "greenboot_status": "red",
          "host_type": "None",
          "infrastructure_type": "virtual",
          "infrastructure_vendor": "ex2",
          "insights_client_version": "5.0.6-2.el7_6",
          "insights_egg_version": "4.4",
          "installed_packages": "arb5-libs-0:-1.16.1-23.fc29.i686",
          "installed_products": Object {
            "id": "dfg",
            "name": "dfg",
            "status": "inactive",
          },
          "installed_services": "ex2",
          "is_marketplace": false,
          "katello_agent_running": false,
          "kernel_modules": "ex2",
          "last_boot_time": "2021-01-11T10:10:10.000Z",
          "mssql": Object {
            "version": "12.5.3",
          },
          "network_interfaces": Object {
            "ipv4_addresses": "60.209.47.155 40.124.217.134",
            "ipv6_addresses": "dd2e:879f:afff:7845:b346:bb88:bcf2:4b1b",
            "mac_address": "100000000000",
            "mtu": 1,
            "name": "eth1",
            "state": "DOWN",
            "type": "infiniband",
          },
          "number_of_cpus": 1,
          "number_of_sockets": 1,
          "operating_system": Object {
            "major": 1,
            "minor": 1,
            "name": "CentOS",
          },
          "os_kernel_version": "4.5.0",
          "os_release": "8.2",
          "owner_id": "ffdfd200-f5b9-4e57-b080-f5e257349df0",
          "releasever": "7.0",
          "rhc_client_id": "33cd8e39-13bb-4d02-8316-84b850dc5136",
          "rhc_config_state": "2c68e8ec-10e2-11ec-82a8-0242ac130003",
          "rhsm": Object {
            "version": "7.5",
          },
          "rpm_ostree_deployments": Object {
            "booted": false,
            "checksum": "73335a77f9853618ba1a5f139c5805e82176a2a040ef5e34d7402e12263af5bb",
            "id": "fedora-blackpink-63335a77f9853618ba1a5f139c5805e82176a2a040ef5e34d7402e12263af5bb.0",
            "origin": "fedora/31/x86_64/blackpink",
            "osname": "fedora-blackpink",
            "pinned": false,
            "version": "31.12",
          },
          "sap": Object {
            "instance_number": "05",
            "sap_system": false,
            "sids": "ABC",
            "version": "2.00.122.04.1478575636",
          },
          "sap_instance_number": "05",
          "sap_sids": "ABC",
          "sap_system": false,
          "sap_version": "2.00.122.04.1478575636",
          "satellite_managed": false,
          "selinux_config_file": "sleepy",
          "selinux_current_mode": "not_enforcing",
          "subscription_auto_attach": "ex2",
          "subscription_status": "ex2",
          "system_memory_bytes": 1,
          "system_purpose": Object {
            "role": "Red Hat Enterprise Linux Workstation",
            "sla": "Standard",
            "usage": "Development/Test",
          },
          "system_update_method": "rpm-ostree",
          "tuned_profile": "example",
        },
      },
      Object {
        "account": "test",
        "display_name": "test1.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc01",
        "org_id": "test",
        "system_profile_facts": Object {
          "operating_system": Object {
            "name": "RHEL",
          },
          "owner_id": "it8i99u1-48ut-1rdf-bc10-84opf904test",
        },
      },
      Object {
        "account": "test",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "org_id": "test",
        "system_profile_facts": Object {
          "ansible": Object {
            "catalog_worker_version": "1.2.3",
            "controller_version": "1.2.3",
            "hub_version": "1.2.3",
            "sso_version": "1.2.3",
          },
          "arch": "ARM",
          "basearch": "x86_64",
          "bios_release_date": "12/01/2006",
          "bios_vendor": "ex1",
          "bios_version": "ex1",
          "captured_date": "ex1",
          "cloud_provider": "aws",
          "cores_per_socket": 0,
          "cpu_flags": "ex1",
          "cpu_model": "Intel(R) Xeon(R) CPU E5-2690 0 @ 2.90GHz",
          "disk_devices": Object {
            "device": "/dev/fdd0",
            "label": "foo",
            "mount_point": "/mnt/remote_nfs_shares",
            "type": "ext1",
          },
          "dnf_modules": Object {
            "name": "abc",
            "stream": "abc",
          },
          "enabled_services": "ex1",
          "gpg_pubkeys": "gpg-pubkey-11111111-22222222",
          "greenboot_fallback_detected": true,
          "greenboot_status": "green",
          "host_type": "edge",
          "infrastructure_type": "physical",
          "infrastructure_vendor": "ex1",
          "insights_client_version": "3.0.1-2.el4_2",
          "insights_egg_version": "2.3",
          "installed_packages": "krb5-libs-0:-1.16.1-23.fc29.i686",
          "installed_products": Object {
            "id": "abc",
            "name": "abc",
            "status": "Subscribed",
          },
          "installed_services": "ex1",
          "is_marketplace": true,
          "katello_agent_running": true,
          "kernel_modules": "ex1",
          "last_boot_time": "2021-01-10T10:10:10.000Z",
          "mssql": Object {
            "version": "15.2.0",
          },
          "network_interfaces": Object {
            "ipv4_addresses": "227.161.169.210 30.143.76.153 233.87.178.7",
            "ipv6_addresses": "8886:2565:f753:1bbb:1d08:4239:c470:a889",
            "mac_address": "00:00:00:00:00:00",
            "mtu": 0,
            "name": "eth0",
            "state": "UP",
            "type": "ether",
          },
          "number_of_cpus": 0,
          "number_of_sockets": 0,
          "operating_system": Object {
            "major": 0,
            "minor": 0,
            "name": "RHEL",
          },
          "os_kernel_version": "4.18.2",
          "os_release": "7.4",
          "owner_id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
          "releasever": "7",
          "rhc_client_id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
          "rhc_config_state": "22cd8e39-13bb-4d02-8316-84b850dc5136",
          "rhsm": Object {
            "version": "8.1",
          },
          "rpm_ostree_deployments": Object {
            "booted": true,
            "checksum": "63335a77f9853618ba1a5f139c5805e82176a2a040ef5e34d7402e12263af5bb",
            "id": "fedora-silverblue-63335a77f9853618ba1a5f139c5805e82176a2a040ef5e34d7402e12263af5bb.0",
            "origin": "fedora/33/x86_64/silverblue",
            "osname": "fedora-silverblue",
            "pinned": true,
            "version": "33.21",
          },
          "sap": Object {
            "instance_number": "03",
            "sap_system": true,
            "sids": "H2O",
            "version": "1.00.122.04.1478575636",
          },
          "sap_instance_number": "03",
          "sap_sids": "H2O",
          "sap_system": true,
          "sap_version": "1.00.122.04.1478575636",
          "satellite_managed": true,
          "selinux_config_file": "permissive",
          "selinux_current_mode": "enforcing",
          "subscription_auto_attach": "ex1",
          "subscription_status": "ex1",
          "system_memory_bytes": 0,
          "system_purpose": Object {
            "role": "Red Hat Enterprise Linux Server",
            "sla": "Premium",
            "usage": "Production",
          },
          "system_update_method": "dnf",
          "tuned_profile": "desktop",
        },
      },
      Object {
        "account": "test",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "org_id": "test",
        "system_profile_facts": Object {
          "ansible": Object {
            "catalog_worker_version": "7.8.9",
            "controller_version": "7.8.9",
            "hub_version": "7.8.9",
            "sso_version": "7.8.9",
          },
          "arch": "RISC-V",
          "basearch": "ppc64",
          "bios_release_date": "12/01/2006",
          "bios_vendor": "ex3",
          "bios_version": "ex3",
          "captured_date": "ex3",
          "cloud_provider": "ibm",
          "cores_per_socket": 2,
          "cpu_flags": "ex3",
          "cpu_model": "Intel(R) I7(R) CPU I7-10900k 0 @ 4.90GHz",
          "disk_devices": Object {
            "device": "/dev/nvme2",
            "label": "baz",
            "mount_point": "/mnt/foo",
            "type": "ext3",
          },
          "dnf_modules": Object {
            "name": "pop",
            "stream": "pop",
          },
          "enabled_services": "ex3",
          "gpg_pubkeys": "gpg-pubkey-22222222-33333333",
          "greenboot_fallback_detected": true,
          "infrastructure_type": "imaginary",
          "infrastructure_vendor": "baremetal",
          "insights_client_version": "6.0.6-2.el8_4",
          "insights_egg_version": "5.1",
          "installed_packages": "brb5-libs-0:-1.16.1-23.fc29.i686",
          "installed_products": Object {
            "id": "pop",
            "name": "pop",
            "status": "canceled",
          },
          "installed_services": "ex3",
          "is_marketplace": true,
          "katello_agent_running": true,
          "kernel_modules": "ex3",
          "last_boot_time": "2021-01-12T10:10:10.000Z",
          "mssql": Object {
            "version": "10.1.0",
          },
          "network_interfaces": Object {
            "ipv4_addresses": "67.77.119.70",
            "ipv6_addresses": "e979:3081:7218:4c98:fd19:5777:309a:957b",
            "mac_address": "20:00:00:00:00:00",
            "mtu": 2,
            "name": "eth2",
            "state": "UNKNOWN",
            "type": "loopback",
          },
          "number_of_cpus": 2,
          "number_of_sockets": 2,
          "operating_system": Object {
            "major": 2,
            "minor": 2,
            "name": "RHEL",
          },
          "os_kernel_version": "5.1.0",
          "os_release": "7.5",
          "owner_id": "e2357169-f5e2-4afa-b509-ab1be3f30807",
          "releasever": "7Server",
          "rhc_client_id": "2fa3e796-10e2-11ec-82a8-0242ac130003",
          "rhc_config_state": "2fa3e796-10e2-11ec-82a8-0242ac130003",
          "rhsm": Object {
            "version": "9.9",
          },
          "rpm_ostree_deployments": Object {
            "booted": true,
            "checksum": "83335a77f9853618ba1a5f139c5805e82176a2a040ef5e34d7402e12263af5bb",
            "id": "fedora-orangeblue-63335a77f9853618ba1a5f139c5805e82176a2a040ef5e34d7402e12263af5bb.0",
            "origin": "fedora/34/x86_64/orangeblue",
            "osname": "fedora-orangeblue",
            "pinned": true,
            "version": "33.45",
          },
          "sap": Object {
            "instance_number": "99",
            "sap_system": true,
            "sids": "XYZ",
            "version": "3.00.122.04.1478575636",
          },
          "sap_instance_number": "99",
          "sap_sids": "XYZ",
          "sap_system": true,
          "sap_version": "3.00.122.04.1478575636",
          "satellite_managed": true,
          "selinux_config_file": "authoritative",
          "selinux_current_mode": "sleeping",
          "subscription_auto_attach": "ex3",
          "subscription_status": "ex3",
          "system_memory_bytes": 2,
          "system_purpose": Object {
            "role": "Red Hat Enterprise Linux Compute Node",
            "sla": "Self-Support",
            "usage": "Disaster Recovery",
          },
          "system_update_method": "yum",
          "tuned_profile": "laptop",
        },
      },
    ],
  },
}
`;

exports[`hosts query ordering operating_system DESC 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "org_id": "test",
        "system_profile_facts": Object {
          "ansible": Object {
            "catalog_worker_version": "7.8.9",
            "controller_version": "7.8.9",
            "hub_version": "7.8.9",
            "sso_version": "7.8.9",
          },
          "arch": "RISC-V",
          "basearch": "ppc64",
          "bios_release_date": "12/01/2006",
          "bios_vendor": "ex3",
          "bios_version": "ex3",
          "captured_date": "ex3",
          "cloud_provider": "ibm",
          "cores_per_socket": 2,
          "cpu_flags": "ex3",
          "cpu_model": "Intel(R) I7(R) CPU I7-10900k 0 @ 4.90GHz",
          "disk_devices": Object {
            "device": "/dev/nvme2",
            "label": "baz",
            "mount_point": "/mnt/foo",
            "type": "ext3",
          },
          "dnf_modules": Object {
            "name": "pop",
            "stream": "pop",
          },
          "enabled_services": "ex3",
          "gpg_pubkeys": "gpg-pubkey-22222222-33333333",
          "greenboot_fallback_detected": true,
          "infrastructure_type": "imaginary",
          "infrastructure_vendor": "baremetal",
          "insights_client_version": "6.0.6-2.el8_4",
          "insights_egg_version": "5.1",
          "installed_packages": "brb5-libs-0:-1.16.1-23.fc29.i686",
          "installed_products": Object {
            "id": "pop",
            "name": "pop",
            "status": "canceled",
          },
          "installed_services": "ex3",
          "is_marketplace": true,
          "katello_agent_running": true,
          "kernel_modules": "ex3",
          "last_boot_time": "2021-01-12T10:10:10.000Z",
          "mssql": Object {
            "version": "10.1.0",
          },
          "network_interfaces": Object {
            "ipv4_addresses": "67.77.119.70",
            "ipv6_addresses": "e979:3081:7218:4c98:fd19:5777:309a:957b",
            "mac_address": "20:00:00:00:00:00",
            "mtu": 2,
            "name": "eth2",
            "state": "UNKNOWN",
            "type": "loopback",
          },
          "number_of_cpus": 2,
          "number_of_sockets": 2,
          "operating_system": Object {
            "major": 2,
            "minor": 2,
            "name": "RHEL",
          },
          "os_kernel_version": "5.1.0",
          "os_release": "7.5",
          "owner_id": "e2357169-f5e2-4afa-b509-ab1be3f30807",
          "releasever": "7Server",
          "rhc_client_id": "2fa3e796-10e2-11ec-82a8-0242ac130003",
          "rhc_config_state": "2fa3e796-10e2-11ec-82a8-0242ac130003",
          "rhsm": Object {
            "version": "9.9",
          },
          "rpm_ostree_deployments": Object {
            "booted": true,
            "checksum": "83335a77f9853618ba1a5f139c5805e82176a2a040ef5e34d7402e12263af5bb",
            "id": "fedora-orangeblue-63335a77f9853618ba1a5f139c5805e82176a2a040ef5e34d7402e12263af5bb.0",
            "origin": "fedora/34/x86_64/orangeblue",
            "osname": "fedora-orangeblue",
            "pinned": true,
            "version": "33.45",
          },
          "sap": Object {
            "instance_number": "99",
            "sap_system": true,
            "sids": "XYZ",
            "version": "3.00.122.04.1478575636",
          },
          "sap_instance_number": "99",
          "sap_sids": "XYZ",
          "sap_system": true,
          "sap_version": "3.00.122.04.1478575636",
          "satellite_managed": true,
          "selinux_config_file": "authoritative",
          "selinux_current_mode": "sleeping",
          "subscription_auto_attach": "ex3",
          "subscription_status": "ex3",
          "system_memory_bytes": 2,
          "system_purpose": Object {
            "role": "Red Hat Enterprise Linux Compute Node",
            "sla": "Self-Support",
            "usage": "Disaster Recovery",
          },
          "system_update_method": "yum",
          "tuned_profile": "laptop",
        },
      },
      Object {
        "account": "test",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "org_id": "test",
        "system_profile_facts": Object {
          "ansible": Object {
            "catalog_worker_version": "1.2.3",
            "controller_version": "1.2.3",
            "hub_version": "1.2.3",
            "sso_version": "1.2.3",
          },
          "arch": "ARM",
          "basearch": "x86_64",
          "bios_release_date": "12/01/2006",
          "bios_vendor": "ex1",
          "bios_version": "ex1",
          "captured_date": "ex1",
          "cloud_provider": "aws",
          "cores_per_socket": 0,
          "cpu_flags": "ex1",
          "cpu_model": "Intel(R) Xeon(R) CPU E5-2690 0 @ 2.90GHz",
          "disk_devices": Object {
            "device": "/dev/fdd0",
            "label": "foo",
            "mount_point": "/mnt/remote_nfs_shares",
            "type": "ext1",
          },
          "dnf_modules": Object {
            "name": "abc",
            "stream": "abc",
          },
          "enabled_services": "ex1",
          "gpg_pubkeys": "gpg-pubkey-11111111-22222222",
          "greenboot_fallback_detected": true,
          "greenboot_status": "green",
          "host_type": "edge",
          "infrastructure_type": "physical",
          "infrastructure_vendor": "ex1",
          "insights_client_version": "3.0.1-2.el4_2",
          "insights_egg_version": "2.3",
          "installed_packages": "krb5-libs-0:-1.16.1-23.fc29.i686",
          "installed_products": Object {
            "id": "abc",
            "name": "abc",
            "status": "Subscribed",
          },
          "installed_services": "ex1",
          "is_marketplace": true,
          "katello_agent_running": true,
          "kernel_modules": "ex1",
          "last_boot_time": "2021-01-10T10:10:10.000Z",
          "mssql": Object {
            "version": "15.2.0",
          },
          "network_interfaces": Object {
            "ipv4_addresses": "227.161.169.210 30.143.76.153 233.87.178.7",
            "ipv6_addresses": "8886:2565:f753:1bbb:1d08:4239:c470:a889",
            "mac_address": "00:00:00:00:00:00",
            "mtu": 0,
            "name": "eth0",
            "state": "UP",
            "type": "ether",
          },
          "number_of_cpus": 0,
          "number_of_sockets": 0,
          "operating_system": Object {
            "major": 0,
            "minor": 0,
            "name": "RHEL",
          },
          "os_kernel_version": "4.18.2",
          "os_release": "7.4",
          "owner_id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
          "releasever": "7",
          "rhc_client_id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
          "rhc_config_state": "22cd8e39-13bb-4d02-8316-84b850dc5136",
          "rhsm": Object {
            "version": "8.1",
          },
          "rpm_ostree_deployments": Object {
            "booted": true,
            "checksum": "63335a77f9853618ba1a5f139c5805e82176a2a040ef5e34d7402e12263af5bb",
            "id": "fedora-silverblue-63335a77f9853618ba1a5f139c5805e82176a2a040ef5e34d7402e12263af5bb.0",
            "origin": "fedora/33/x86_64/silverblue",
            "osname": "fedora-silverblue",
            "pinned": true,
            "version": "33.21",
          },
          "sap": Object {
            "instance_number": "03",
            "sap_system": true,
            "sids": "H2O",
            "version": "1.00.122.04.1478575636",
          },
          "sap_instance_number": "03",
          "sap_sids": "H2O",
          "sap_system": true,
          "sap_version": "1.00.122.04.1478575636",
          "satellite_managed": true,
          "selinux_config_file": "permissive",
          "selinux_current_mode": "enforcing",
          "subscription_auto_attach": "ex1",
          "subscription_status": "ex1",
          "system_memory_bytes": 0,
          "system_purpose": Object {
            "role": "Red Hat Enterprise Linux Server",
            "sla": "Premium",
            "usage": "Production",
          },
          "system_update_method": "dnf",
          "tuned_profile": "desktop",
        },
      },
      Object {
        "account": "test",
        "display_name": "test1.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc01",
        "org_id": "test",
        "system_profile_facts": Object {
          "operating_system": Object {
            "name": "RHEL",
          },
          "owner_id": "it8i99u1-48ut-1rdf-bc10-84opf904test",
        },
      },
      Object {
        "account": "test",
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "org_id": "test",
        "system_profile_facts": Object {
          "ansible": Object {
            "catalog_worker_version": "4.5.6",
            "controller_version": "4.5.6",
            "hub_version": "4.5.6",
            "sso_version": "4.5.6",
          },
          "arch": "x86_64",
          "basearch": "arm",
          "bios_release_date": "12/01/2006",
          "bios_vendor": "ex2",
          "bios_version": "ex2",
          "captured_date": "ex2",
          "cloud_provider": "ms",
          "cores_per_socket": 1,
          "cpu_flags": "ex2",
          "cpu_model": "Intel(R) Xeon(R) CPU E9-7800 0 @ 1.90GHz",
          "disk_devices": Object {
            "device": "/dev/sda1",
            "label": "bar",
            "mount_point": "/mnt/local_nfs",
            "type": "ext2",
          },
          "dnf_modules": Object {
            "name": "dfg",
            "stream": "dfg",
          },
          "enabled_services": "ex2",
          "gpg_pubkeys": "gpg-pubkey-22222222-22222222",
          "greenboot_fallback_detected": false,
          "greenboot_status": "red",
          "host_type": "None",
          "infrastructure_type": "virtual",
          "infrastructure_vendor": "ex2",
          "insights_client_version": "5.0.6-2.el7_6",
          "insights_egg_version": "4.4",
          "installed_packages": "arb5-libs-0:-1.16.1-23.fc29.i686",
          "installed_products": Object {
            "id": "dfg",
            "name": "dfg",
            "status": "inactive",
          },
          "installed_services": "ex2",
          "is_marketplace": false,
          "katello_agent_running": false,
          "kernel_modules": "ex2",
          "last_boot_time": "2021-01-11T10:10:10.000Z",
          "mssql": Object {
            "version": "12.5.3",
          },
          "network_interfaces": Object {
            "ipv4_addresses": "60.209.47.155 40.124.217.134",
            "ipv6_addresses": "dd2e:879f:afff:7845:b346:bb88:bcf2:4b1b",
            "mac_address": "100000000000",
            "mtu": 1,
            "name": "eth1",
            "state": "DOWN",
            "type": "infiniband",
          },
          "number_of_cpus": 1,
          "number_of_sockets": 1,
          "operating_system": Object {
            "major": 1,
            "minor": 1,
            "name": "CentOS",
          },
          "os_kernel_version": "4.5.0",
          "os_release": "8.2",
          "owner_id": "ffdfd200-f5b9-4e57-b080-f5e257349df0",
          "releasever": "7.0",
          "rhc_client_id": "33cd8e39-13bb-4d02-8316-84b850dc5136",
          "rhc_config_state": "2c68e8ec-10e2-11ec-82a8-0242ac130003",
          "rhsm": Object {
            "version": "7.5",
          },
          "rpm_ostree_deployments": Object {
            "booted": false,
            "checksum": "73335a77f9853618ba1a5f139c5805e82176a2a040ef5e34d7402e12263af5bb",
            "id": "fedora-blackpink-63335a77f9853618ba1a5f139c5805e82176a2a040ef5e34d7402e12263af5bb.0",
            "origin": "fedora/31/x86_64/blackpink",
            "osname": "fedora-blackpink",
            "pinned": false,
            "version": "31.12",
          },
          "sap": Object {
            "instance_number": "05",
            "sap_system": false,
            "sids": "ABC",
            "version": "2.00.122.04.1478575636",
          },
          "sap_instance_number": "05",
          "sap_sids": "ABC",
          "sap_system": false,
          "sap_version": "2.00.122.04.1478575636",
          "satellite_managed": false,
          "selinux_config_file": "sleepy",
          "selinux_current_mode": "not_enforcing",
          "subscription_auto_attach": "ex2",
          "subscription_status": "ex2",
          "system_memory_bytes": 1,
          "system_purpose": Object {
            "role": "Red Hat Enterprise Linux Workstation",
            "sla": "Standard",
            "usage": "Development/Test",
          },
          "system_update_method": "rpm-ostree",
          "tuned_profile": "example",
        },
      },
      Object {
        "account": "test",
        "display_name": "test3.rhel8.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc03",
        "org_id": "test",
        "system_profile_facts": Object {
          "operating_system": Object {
            "major": 8,
            "name": "CENT",
          },
          "owner_id": "it8i99u1-48ut-1rdf-bc10-84opf904test",
        },
      },
      Object {
        "account": "test",
        "display_name": "test4.rhel.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc04",
        "org_id": "test",
        "system_profile_facts": Object {
          "operating_system": Object {
            "minor": 7,
            "name": "CENT",
          },
          "owner_id": "it8i99u1-48ut-1rdf-bc10-84opf904test",
        },
      },
      Object {
        "account": "test",
        "display_name": "test2.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc02",
        "org_id": "test",
        "system_profile_facts": Object {
          "operating_system": Object {
            "major": 8,
          },
          "owner_id": "it8i99u1-48ut-1rdf-bc10-84opf904test",
        },
      },
    ],
  },
}
`;

exports[`hosts query queries compound 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "ansible_host": "test02.rhel7.jharting.local",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-01-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test03.rhel7.jharting.local",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
    ],
  },
}
`;

exports[`hosts query queries facts all facts 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "display_name": "test02.rhel7.jharting.local",
        "facts": Object {
          "bios": Object {
            "bios.release_date": "2014-04-01",
            "bios.vendor": "SeaBIOS",
            "bios.version": "1.11.0-2.el7",
          },
          "os": Object {
            "os.release": "Red Hat Enterprise Linux Server",
          },
        },
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "org_id": "test",
      },
    ],
  },
}
`;

exports[`hosts query queries facts facts not available 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "display_name": "test01.rhel7.jharting.local",
        "facts": null,
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "org_id": "test",
      },
    ],
  },
}
`;

exports[`hosts query queries facts specific fact key 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "display_name": "test02.rhel7.jharting.local",
        "facts": Object {
          "bios": Object {
            "bios.release_date": "2014-04-01",
            "bios.vendor": "SeaBIOS",
            "bios.version": "1.11.0-2.el7",
          },
        },
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "org_id": "test",
      },
    ],
  },
}
`;

exports[`hosts query queries groups group filter eq honors case 1`] = `
Object {
  "hosts": Object {
    "data": Array [],
  },
}
`;

exports[`hosts query queries groups group filter eq_lc ignores case 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "display_name": "groups-test-case-sensitive",
        "groups": Object {
          "data": Array [
            Object {
              "account": "hostGroupsTest",
              "created": "2023-04-12T11:11:00.000000Z",
              "id": "c32835f4-922d-4a0e-97e0-cdd429cf7007",
              "name": "MiXeDCaSe",
              "org_id": "hostGroupsTest",
              "updated": "2023-04-12T12:34:56.789000Z",
            },
          ],
          "meta": Object {
            "total": 1,
          },
        },
        "id": "fb653397-a6bf-4a06-85b3-ead2a1ca48bf",
      },
    ],
  },
}
`;

exports[`hosts query queries groups group filter for hosts without a group 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "display_name": "groups-test-3",
        "groups": Object {
          "data": Array [],
          "meta": Object {
            "total": 0,
          },
        },
        "id": "fa48a4c8-6c4c-4be9-949f-c659ef9bfdd7",
      },
    ],
  },
}
`;

exports[`hosts query queries groups group filter intersection 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "display_name": "groups-test-1",
        "groups": Object {
          "data": Array [
            Object {
              "account": "hostGroupsTest",
              "created": "2023-04-12T11:11:00.000000Z",
              "id": "54ef7a4d-47fd-47f9-85e3-d60259e2d8f2",
              "name": "prod",
              "org_id": "hostGroupsTest",
              "updated": "2023-04-12T12:34:56.789000Z",
            },
            Object {
              "account": "hostGroupsTest",
              "created": "2021-01-12T11:11:00.000000Z",
              "id": "7f14c1df-2e42-4b12-99f6-d538b51e079c",
              "name": "foo",
              "org_id": "hostGroupsTest",
              "updated": "2021-01-12T12:34:56.789000Z",
            },
            Object {
              "account": "hostGroupsTest",
              "created": "2022-02-12T11:11:00.000000Z",
              "id": "911c454f-0dc8-4e0b-97fd-c78decbd9299",
              "name": "bar",
              "org_id": "hostGroupsTest",
              "updated": "2022-02-12T12:34:56.789000Z",
            },
          ],
          "meta": Object {
            "total": 3,
          },
        },
        "id": "d36bd5c3-fb39-4826-8d82-152bedfd1ecd",
      },
    ],
  },
}
`;

exports[`hosts query queries groups group filter matches honors case 1`] = `
Object {
  "hosts": Object {
    "data": Array [],
  },
}
`;

exports[`hosts query queries groups group filter matches_lc ignores case 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "display_name": "groups-test-case-sensitive",
        "groups": Object {
          "data": Array [
            Object {
              "account": "hostGroupsTest",
              "created": "2023-04-12T11:11:00.000000Z",
              "id": "c32835f4-922d-4a0e-97e0-cdd429cf7007",
              "name": "MiXeDCaSe",
              "org_id": "hostGroupsTest",
              "updated": "2023-04-12T12:34:56.789000Z",
            },
          ],
          "meta": Object {
            "total": 1,
          },
        },
        "id": "fb653397-a6bf-4a06-85b3-ead2a1ca48bf",
      },
    ],
  },
}
`;

exports[`hosts query queries groups group filter name equals 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "display_name": "groups-test-1",
        "groups": Object {
          "data": Array [
            Object {
              "account": "hostGroupsTest",
              "created": "2023-04-12T11:11:00.000000Z",
              "id": "54ef7a4d-47fd-47f9-85e3-d60259e2d8f2",
              "name": "prod",
              "org_id": "hostGroupsTest",
              "updated": "2023-04-12T12:34:56.789000Z",
            },
            Object {
              "account": "hostGroupsTest",
              "created": "2021-01-12T11:11:00.000000Z",
              "id": "7f14c1df-2e42-4b12-99f6-d538b51e079c",
              "name": "foo",
              "org_id": "hostGroupsTest",
              "updated": "2021-01-12T12:34:56.789000Z",
            },
            Object {
              "account": "hostGroupsTest",
              "created": "2022-02-12T11:11:00.000000Z",
              "id": "911c454f-0dc8-4e0b-97fd-c78decbd9299",
              "name": "bar",
              "org_id": "hostGroupsTest",
              "updated": "2022-02-12T12:34:56.789000Z",
            },
          ],
          "meta": Object {
            "total": 3,
          },
        },
        "id": "d36bd5c3-fb39-4826-8d82-152bedfd1ecd",
      },
      Object {
        "display_name": "groups-test-2",
        "groups": Object {
          "data": Array [
            Object {
              "account": "hostGroupsTest",
              "created": "2023-04-12T11:11:00.000000Z",
              "id": "54ef7a4d-47fd-47f9-85e3-d60259e2d8f2",
              "name": "prod",
              "org_id": "hostGroupsTest",
              "updated": "2023-04-12T12:34:56.789000Z",
            },
            Object {
              "account": "hostGroupsTest",
              "created": "2023-04-12T11:11:00.000000Z",
              "id": "7c004532-13ff-4741-ab19-53bcb610490e",
              "name": "baz",
              "org_id": "hostGroupsTest",
              "updated": "2023-04-12T12:34:56.789000Z",
            },
          ],
          "meta": Object {
            "total": 2,
          },
        },
        "id": "c8bdc235-9f60-413f-bf02-6781946ebd27",
      },
    ],
  },
}
`;

exports[`hosts query queries groups group filter union 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "display_name": "groups-test-2",
        "groups": Object {
          "data": Array [
            Object {
              "account": "hostGroupsTest",
              "created": "2023-04-12T11:11:00.000000Z",
              "id": "54ef7a4d-47fd-47f9-85e3-d60259e2d8f2",
              "name": "prod",
              "org_id": "hostGroupsTest",
              "updated": "2023-04-12T12:34:56.789000Z",
            },
            Object {
              "account": "hostGroupsTest",
              "created": "2023-04-12T11:11:00.000000Z",
              "id": "7c004532-13ff-4741-ab19-53bcb610490e",
              "name": "baz",
              "org_id": "hostGroupsTest",
              "updated": "2023-04-12T12:34:56.789000Z",
            },
          ],
          "meta": Object {
            "total": 2,
          },
        },
        "id": "c8bdc235-9f60-413f-bf02-6781946ebd27",
      },
      Object {
        "display_name": "groups-test-3",
        "groups": Object {
          "data": Array [],
          "meta": Object {
            "total": 0,
          },
        },
        "id": "fa48a4c8-6c4c-4be9-949f-c659ef9bfdd7",
      },
    ],
  },
}
`;

exports[`hosts query queries groups simple output 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "display_name": "test01.rhel7.jharting.local",
        "groups": Object {
          "data": Array [],
          "meta": Object {
            "total": 0,
          },
        },
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
      },
      Object {
        "display_name": "test02.rhel7.jharting.local",
        "groups": Object {
          "data": Array [
            Object {
              "account": "test",
              "created": "2023-04-12T11:11:00.000000Z",
              "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
              "name": "group1",
              "org_id": "test",
              "updated": "2023-04-12T12:34:56.789000Z",
            },
          ],
          "meta": Object {
            "total": 1,
          },
        },
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
      },
      Object {
        "display_name": "test03.rhel7.jharting.local",
        "groups": Object {
          "data": Array [],
          "meta": Object {
            "total": 0,
          },
        },
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
      },
      Object {
        "display_name": "test1.rhel7.aprice.local",
        "groups": Object {
          "data": Array [],
          "meta": Object {
            "total": 0,
          },
        },
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc01",
      },
      Object {
        "display_name": "test2.rhel7.aprice.local",
        "groups": Object {
          "data": Array [],
          "meta": Object {
            "total": 0,
          },
        },
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc02",
      },
      Object {
        "display_name": "test3.rhel8.aprice.local",
        "groups": Object {
          "data": Array [],
          "meta": Object {
            "total": 0,
          },
        },
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc03",
      },
      Object {
        "display_name": "test4.rhel.aprice.local",
        "groups": Object {
          "data": Array [],
          "meta": Object {
            "total": 0,
          },
        },
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc04",
      },
    ],
  },
}
`;

exports[`hosts query queries stale_timestamp basic 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "ansible_host": "test01.rhel7.jharting.local",
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "modified_on": "2019-02-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-02-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test02.rhel7.jharting.local",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-01-10T08:07:03.354307Z",
      },
    ],
  },
}
`;

exports[`hosts query queries stale_timestamp gt only 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "ansible_host": "test03.rhel7.jharting.local",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test01.rhel7.aprice.local",
        "display_name": "test1.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc01",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test02.rhel7.aprice.local",
        "display_name": "test2.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc02",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test03.rhel8.aprice.local",
        "display_name": "test3.rhel8.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc03",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test04.rhel.aprice.local",
        "display_name": "test4.rhel.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc04",
        "modified_on": "2020-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
    ],
  },
}
`;

exports[`hosts query queries stale_timestamp gte only 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "ansible_host": "test01.rhel7.jharting.local",
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "modified_on": "2019-02-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-02-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test03.rhel7.jharting.local",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test01.rhel7.aprice.local",
        "display_name": "test1.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc01",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test02.rhel7.aprice.local",
        "display_name": "test2.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc02",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test03.rhel8.aprice.local",
        "display_name": "test3.rhel8.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc03",
        "modified_on": "2019-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test04.rhel.aprice.local",
        "display_name": "test4.rhel.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc04",
        "modified_on": "2020-03-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-03-10T08:07:03.354307Z",
      },
    ],
  },
}
`;

exports[`hosts query queries stale_timestamp lt only 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "ansible_host": "test02.rhel7.jharting.local",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-01-10T08:07:03.354307Z",
      },
    ],
  },
}
`;

exports[`hosts query queries stale_timestamp lte only 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "ansible_host": "test01.rhel7.jharting.local",
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "modified_on": "2019-02-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-02-10T08:07:03.354307Z",
      },
      Object {
        "account": "test",
        "ansible_host": "test02.rhel7.jharting.local",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
        "org_id": "test",
        "reporter": "puptoo",
        "stale_timestamp": "2030-01-10T08:07:03.354307Z",
      },
    ],
  },
}
`;

exports[`hosts query queries tags simple output 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "tags": Object {
          "data": Array [
            Object {
              "key": "env",
              "namespace": "Sat",
              "value": "prod",
            },
            Object {
              "key": "region",
              "namespace": "aws",
              "value": "us-east-1",
            },
            Object {
              "key": "database",
              "namespace": "insights-client",
              "value": null,
            },
          ],
          "meta": Object {
            "total": 3,
          },
        },
      },
      Object {
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "tags": Object {
          "data": Array [
            Object {
              "key": "env",
              "namespace": "Sat",
              "value": "prod",
            },
            Object {
              "key": "region",
              "namespace": "aws",
              "value": "us-east-2",
            },
            Object {
              "key": "web",
              "namespace": "insights-client",
              "value": null,
            },
            Object {
              "key": "os",
              "namespace": "insights-client",
              "value": "fedora",
            },
            Object {
              "key": "special/keyΔwithčhars",
              "namespace": "insights-client",
              "value": "special/valueΔwithčhars!",
            },
          ],
          "meta": Object {
            "total": 5,
          },
        },
      },
      Object {
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "tags": Object {
          "data": Array [
            Object {
              "key": "env",
              "namespace": "Sat",
              "value": "prod",
            },
            Object {
              "key": "region",
              "namespace": "aws",
              "value": "us-east-3",
            },
            Object {
              "key": "database",
              "namespace": "insights-client",
              "value": null,
            },
            Object {
              "key": "os",
              "namespace": "insights-client",
              "value": "fedora",
            },
          ],
          "meta": Object {
            "total": 4,
          },
        },
      },
      Object {
        "display_name": "test1.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc01",
        "tags": Object {
          "data": Array [],
          "meta": Object {
            "total": 0,
          },
        },
      },
      Object {
        "display_name": "test2.rhel7.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc02",
        "tags": Object {
          "data": Array [],
          "meta": Object {
            "total": 0,
          },
        },
      },
      Object {
        "display_name": "test3.rhel8.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc03",
        "tags": Object {
          "data": Array [],
          "meta": Object {
            "total": 0,
          },
        },
      },
      Object {
        "display_name": "test4.rhel.aprice.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bc04",
        "tags": Object {
          "data": Array [],
          "meta": Object {
            "total": 0,
          },
        },
      },
    ],
  },
}
`;

exports[`hosts query queries tags simple tag filter with explicit null value 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "tags": Object {
          "data": Array [
            Object {
              "key": "env",
              "namespace": "Sat",
              "value": "prod",
            },
            Object {
              "key": "region",
              "namespace": "aws",
              "value": "us-east-2",
            },
            Object {
              "key": "web",
              "namespace": "insights-client",
              "value": null,
            },
            Object {
              "key": "os",
              "namespace": "insights-client",
              "value": "fedora",
            },
            Object {
              "key": "special/keyΔwithčhars",
              "namespace": "insights-client",
              "value": "special/valueΔwithčhars!",
            },
          ],
          "meta": Object {
            "total": 5,
          },
        },
      },
    ],
  },
}
`;

exports[`hosts query queries tags simple tag filter with no value 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "tags": Object {
          "data": Array [
            Object {
              "key": "env",
              "namespace": "Sat",
              "value": "prod",
            },
            Object {
              "key": "region",
              "namespace": "aws",
              "value": "us-east-2",
            },
            Object {
              "key": "web",
              "namespace": "insights-client",
              "value": null,
            },
            Object {
              "key": "os",
              "namespace": "insights-client",
              "value": "fedora",
            },
            Object {
              "key": "special/keyΔwithčhars",
              "namespace": "insights-client",
              "value": "special/valueΔwithčhars!",
            },
          ],
          "meta": Object {
            "total": 5,
          },
        },
      },
    ],
  },
}
`;

exports[`hosts query queries tags simple tag filter with value 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "tags": Object {
          "data": Array [
            Object {
              "key": "env",
              "namespace": "Sat",
              "value": "prod",
            },
            Object {
              "key": "region",
              "namespace": "aws",
              "value": "us-east-1",
            },
            Object {
              "key": "database",
              "namespace": "insights-client",
              "value": null,
            },
          ],
          "meta": Object {
            "total": 3,
          },
        },
      },
    ],
  },
}
`;

exports[`hosts query queries tags tag filter intersection 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "tags": Object {
          "data": Array [
            Object {
              "key": "env",
              "namespace": "Sat",
              "value": "prod",
            },
            Object {
              "key": "region",
              "namespace": "aws",
              "value": "us-east-3",
            },
            Object {
              "key": "database",
              "namespace": "insights-client",
              "value": null,
            },
            Object {
              "key": "os",
              "namespace": "insights-client",
              "value": "fedora",
            },
          ],
          "meta": Object {
            "total": 4,
          },
        },
      },
    ],
  },
}
`;

exports[`hosts query queries tags tag filter union 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "tags": Object {
          "data": Array [
            Object {
              "key": "env",
              "namespace": "Sat",
              "value": "prod",
            },
            Object {
              "key": "region",
              "namespace": "aws",
              "value": "us-east-1",
            },
            Object {
              "key": "database",
              "namespace": "insights-client",
              "value": null,
            },
          ],
          "meta": Object {
            "total": 3,
          },
        },
      },
      Object {
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "tags": Object {
          "data": Array [
            Object {
              "key": "env",
              "namespace": "Sat",
              "value": "prod",
            },
            Object {
              "key": "region",
              "namespace": "aws",
              "value": "us-east-2",
            },
            Object {
              "key": "web",
              "namespace": "insights-client",
              "value": null,
            },
            Object {
              "key": "os",
              "namespace": "insights-client",
              "value": "fedora",
            },
            Object {
              "key": "special/keyΔwithčhars",
              "namespace": "insights-client",
              "value": "special/valueΔwithčhars!",
            },
          ],
          "meta": Object {
            "total": 5,
          },
        },
      },
    ],
  },
}
`;
